- Added kgge to metarfilter (icao and st files)
- Revised nbspstatcounters to output stats data in various formats (std, xml,
  csv, csvk) for use locally by e.g., collectd, rrdtool, npstats.
  (see nbspstats.README)
- Added inbsp extension for exporting nbspstatcounters data via web interface
  (for use remotely in, e.g., collectd, rrdtool, npstats)
  (see nbspstats.README)
- A news script "nbspreconfigure" for use as an easy way to configure
  Nbsp for pure ingest mode and back to the default mode.
- Added nbspstats script. Can be invoked from a terminal to print out
  a statistics summary.

Previous Notes -

This second generation of Nbsp contains many improvements and new features
over the Nbsp-1.x versions, too many to list them one by one here.
The most important changes have taken place in the networking module,
which has been revised to support very configurable master-slave setups
to support the iNoaaport project.

Nbsp can now receive data from various sources, simultaneously,
including Noaaport, Radar Level II data, and/or other Nbsp master servers.
Most, if not all, of the new features are documented in some form in the
README files or the noaaport.net site.

Starting with version 2.0.r2, nbspd runs as the user
"noaaport", and therefore the directories where the daemon writes
must be owned by that user:

    chown -R noaaport:noaaport /var/noaaport
    chown -R noaaport:noaaport /var/log/noaaport
    chown -R noaaport:noaaport /var/log/nbsp
    chown -R noaaport:noaaport /var/run/nbsp

During a fresh install, the package installer will create the
directories with the appropriate ownership, but not during an upgrade.
If you are uprading from an older version, those commands must be
executed manually.

The Nbspgpmap package is being released simultaneously. This package consists
of a bunch of program scripts that use the Tclgempak library to drive
several of the Gempak plot programs.

The Tclssh package is included in this release. This package allows